@@ -4,6 +4,7 @@
 
 Version 1.0.9 to be released
 ----------------------------
+- Bug #470: Fixed CTimestamp getdate bug which is related with timezone setting (Qiang)
 - Bug #499: Blog demo approve comment page doesn't have proper pagination (Qiang)
 - Bug #510: CHtml::htmlButton() should render the label as the element body rather than value attribute (Qiang)
 - Bug #513: CNumberValidator does not validate as expected when the attribute value is not string (Qiang)
